Prevent image distortion if images are not in a 16/9 ratio

--- a/index.css
+++ b/index.css
@@ -46,6 +46,7 @@
   aspect-ratio: 16 / 9;
   width: 100%;
   height: auto;
+  object-fit: cover;
 }
 
 .k-block-selector .k-block-types .k-button-text .k-icon {
